Added a media query

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
         </section>
         <section class="about_us">
             <img src="images/phone.png" alt="phone" class="phone"/>
-            <h2>De dónde venimos</h2>
-            <p class="paragraph">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.</p>
-            <p>
-                Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.    </p>
+            <div class="text">
+                <h2 class="we_from">De dónde venimos</h2>
+                <p class="paragraph">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.</p>
+                <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.    </p>
+            </div>
         </section>
         <section class="guests">
             <h2>Invitadas/os estelares</h2>
