--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script src="https://kit.fontawesome.com/4c0c34a743.js" crossorigin="anonymous"></script>
     <title>Proyecto Podcast</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap|IBM+Plex+Mono&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap">
 </head>
 <body>
     <header>
@@ -17,11 +18,11 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <ul>
-                    <li><a href="#">EPISODIOS</a></li>
-                    <li><a href="#">NOSOTROS</a></li>
-                    <li><a href="#">ENTREVISTAS</a></li>
-                    <li><a href="#">TÓPICOS</a></li>
+                <ul class="list">
+                    <li class="hoverable"><a class="hoverable" href="#episodes">EPISODIOS</a></li>
+                    <li class="hoverable"><a class="hoverable" href="https://www.w3schools.com/cssref/tryit.asp?filename=trycss_sel_visited" target="_blank">NOSOTROS</a></li>
+                    <li class="hoverable"><a href="#">ENTREVISTAS</a></li>
+                    <li class="hoverable"><a href="#">TÓPICOS</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,11 +31,9 @@
         <section class="title">
             <h1>Hello <strike>world</strike><br>pale blue dot<span class="dot">.</span></h1>
             <p class="firstp">El portal de podcasts que explora el mundo de la programación<span class="tecnologia"> y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</p>
-            <div id="button1">
-                <p>CONOCÉ MÁS</p>
-            </div>
+            <button type="button">CONOCÉ MÁS</button>
         </section>
-        <section class="episodes">
+        <section id="episodes">
             <h2 class="skewb">EPISODIOS</h2>
             <div class="siblings">
                 <iframe  
@@ -78,7 +77,7 @@
                 <img src="images/susan-kare.png" alt="Susan Kare" class="guest"/>
             </div>
         </section>
-        <section class="">
+        <section>
             <h2>Algunos de nuestros temas</h2>
             <div class="topics">
                 <div class="topic_container">
@@ -101,9 +100,7 @@
         </section>
         <section class="latest_news">
             <h2 class="skew_back">¿Querés las últimas novedades?</h2>
-            <div id="button1" class="button2">
-                <p>CONOCÉ MÁS</p>
-            </div>   
+            <button class="button2">CONOCÉ MÁS</button>   
         </section>
 
     </main>
