Added the validator.w3 modifications

--- a/index.html
+++ b/index.html
@@ -29,33 +29,17 @@
     </header>
     <main>
         <section class="title">
-            <h1>Hello <strike>world</strike><br>pale blue dot<span class="dot">.</span></h1>
+            <h1>Hello <span class="strike">world</span><br>pale blue dot<span class="dot">.</span></h1>
             <p class="firstp">El portal de podcasts que explora el mundo de la programación<span class="tecnologia"> y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</p>
             <button type="button">CONOCÉ MÁS</button>
         </section>
         <section id="episodes">
             <h2 class="skewb">EPISODIOS</h2>
             <div class="siblings">
-                <iframe  
-                    src="//open.spotify.com/embed/episode/7AZZy2nJ4R9ZndHW0h2yxt?si=WJWtRMryTyqWacxvReROLA"
-                    frameborder="0"
-                    allow="encrypted-media"
-                    height="225"></iframe>
-                <iframe  
-                    src="https://open.spotify.com/embed/episode/1ezdL2ivAGLwSE6Xbssxqt?si=kEAF6xGvRdulqjzrf4Y1YQ"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"></iframe>
-                <iframe  
-                    src="https://open.spotify.com/embed/episode/3cWta1iiQSfvrdHaCbLkSD?si=WD44lkM5QPW99NqgJJYmAA"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"></iframe>
-                <iframe  
-                    src="https://open.spotify.com/embed/episode/31VyAQAwBiKoHVoYUCEzjQ?si=BhWNP5C_RWWRrKik1cMXwg"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"></iframe>
+                <iframe src="//open.spotify.com/embed/episode/7AZZy2nJ4R9ZndHW0h2yxt?si=WJWtRMryTyqWacxvReROLA"></iframe>
+                <iframe src="https://open.spotify.com/embed/episode/1ezdL2ivAGLwSE6Xbssxqt?si=kEAF6xGvRdulqjzrf4Y1YQ"></iframe>
+                <iframe src="https://open.spotify.com/embed/episode/3cWta1iiQSfvrdHaCbLkSD?si=WD44lkM5QPW99NqgJJYmAA"></iframe>
+                <iframe src="https://open.spotify.com/embed/episode/31VyAQAwBiKoHVoYUCEzjQ?si=BhWNP5C_RWWRrKik1cMXwg"></iframe>
             </div>
         </section>
         <section class="about_us">
