Modified the margins and changed the name of the images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section class="title">
-            <h1>Hello <span class="strike">world</span><br>pale blue dot<span class="dot">.</span></h1>
+            <h1>Hello <span class="strike">world</span> pale blue dot<span class="dot">.</span></h1>
             <p class="firstp">El portal de podcasts que explora el mundo de la programación<span class="tecnologia"> y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</p>
             <button type="button">CONOCÉ MÁS</button>
         </section>
@@ -47,7 +47,7 @@
             <div class="text">
                 <h2 class="we_from">De dónde venimos</h2>
                 <p class="paragraph">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.</p>
-                <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.    </p>
+                <p class="paragraph">Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
             </div>
         </section>
         <section class="guests">
@@ -56,8 +56,8 @@
                 <img src="images/grace-hopper.png" alt="Grace Hopper" class="guest"/>
                 <img src="images/Katie-Bouman.png" alt="Katie Bouman" class="guest"/>
                 <img src="images/Margaret_Hamilton.png" alt="Margaret Hamilton" class="guest"/>
-                <img src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="Computer in the 1950s" class="guest"/>
-                <img src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="Computer" class="guest"/>
+                <img src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png" alt="Computer in the 1950s" class="guest"/>
+                <img src="images/Computer_operators_with_an_Eniac —_the_world’s _first_programmable_general_purpose_computer.png" alt="Computer" class="guest"/>
                 <img src="images/susan-kare.png" alt="Susan Kare" class="guest"/>
             </div>
         </section>
