--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="images/Katie-Bouman.png" alt="Katie Bouman" class="guest"/>
                 <img src="images/Margaret_Hamilton.png" alt="Margaret Hamilton" class="guest"/>
                 <img src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png" alt="Computer in the 1950s" class="guest"/>
-                <img src="images/Computer_operators_with_an_Eniac—_the_world’s _first_programmable_general_purpose_computer.png" alt="Computer" class="guest"/>
+                <img src="images/Computer_operators_with_an_Eniac—_the_world’s_first_programmable_general_purpose_computer.png" alt="Computer" class="guest"/>
                 <img src="images/susan-kare.png" alt="Susan Kare" class="guest"/>
             </div>
         </section>
