--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <span></span>
                 <span></span>
                 <ul class="list">
-                    <li class="hoverable"><a class="hoverable" href="#episodes">EPISODIOS</a></li>
-                    <li class="hoverable"><a class="hoverable" href="https://www.w3schools.com/cssref/tryit.asp?filename=trycss_sel_visited" target="_blank">NOSOTROS</a></li>
-                    <li class="hoverable"><a href="#">ENTREVISTAS</a></li>
-                    <li class="hoverable"><a href="#">TÓPICOS</a></li>
+                    <li class="hoverable"><a href="#episodes">EPISODIOS</a></li>
+                    <li class="hoverable"><a href="#about_us" target="_blank">NOSOTROS</a></li>
+                    <li class="hoverable"><a href="#guests">ENTREVISTAS</a></li>
+                    <li class="hoverable"><a href="#topics">TÓPICOS</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,10 +39,10 @@
                 <iframe src="//open.spotify.com/embed/episode/7AZZy2nJ4R9ZndHW0h2yxt?si=WJWtRMryTyqWacxvReROLA"></iframe>
                 <iframe src="https://open.spotify.com/embed/episode/1ezdL2ivAGLwSE6Xbssxqt?si=kEAF6xGvRdulqjzrf4Y1YQ"></iframe>
                 <iframe src="https://open.spotify.com/embed/episode/3cWta1iiQSfvrdHaCbLkSD?si=WD44lkM5QPW99NqgJJYmAA"></iframe>
-                <iframe src="https://open.spotify.com/embed/episode/31VyAQAwBiKoHVoYUCEzjQ?si=BhWNP5C_RWWRrKik1cMXwg"></iframe>
+                <iframe src="https://open.spotify.com/embed/episode/5mddqHiI96V0ZMdMidn3WW"></iframe>
             </div>
         </section>
-        <section class="about_us">
+        <section id="about_us" class="about_us">
             <img src="images/phone.png" alt="phone" class="phone"/>
             <div class="text">
                 <h2 class="we_from">De dónde venimos</h2>
@@ -50,7 +50,7 @@
                 <p class="paragraph">Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
             </div>
         </section>
-        <section class="guests">
+        <section id="guests" class="guests">
             <h2>Invitadas/os estelares</h2>
             <div class="guests_images">
                 <img src="images/grace-hopper.png" alt="Grace Hopper" class="guest"/>
@@ -61,7 +61,7 @@
                 <img src="images/susan-kare.png" alt="Susan Kare" class="guest"/>
             </div>
         </section>
-        <section>
+        <section id="topics">
             <h2>Algunos de nuestros temas</h2>
             <div class="topics">
                 <div class="topic_container">
