--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     <footer>
         <p>© 2019— Hello blue pale dot</p>
         <div class="social_media">
-            <i class="fab fa-spotify"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-telegram"></i>
+            <a href="https://www.spotify.com" target="_blank"><i class="fab fa-spotify"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://web.telegram.org" target="_blank"><i class="fab fa-telegram"></i></a>
         </div>
     </footer>
 </body>
